--- a/TODO
+++ b/TODO
@@ -1,7 +1,3 @@
-1) Tests for curator add/remove
-) Proposal test
-) Uncomment reward team
-
+1) Uncomment reward team
 2) Split contract
 3) Block proposal voting
-4) Vote 
